--- a/lib/style.css
+++ b/lib/style.css
@@ -4,20 +4,22 @@ body {
   font-weight: 200;
   margin: 0;
   display: grid;
+  background: linear-gradient(164deg, rgba(123,134,232,1) 0%, rgba(246,140,255,1) 52%, rgba(255,222,50,1) 100%);
+
 }
 
 nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 20px;
   position: sticky;
   top: 0;
   width: 100vw;
+  background-color: rgba(100, 106, 112, 0.226);
 }
 
 header {
-  background: linear-gradient(164deg, rgba(123,134,232,1) 0%, rgba(246,140,255,1) 52%, rgba(255,222,50,1) 100%);
+  /* background: linear-gradient(164deg, rgba(123,134,232,1) 0%, rgba(246,140,255,1) 52%, rgba(255,222,50,1) 100%); */
 }
 
 #menu {
@@ -26,7 +28,6 @@ header {
   gap: 1em;
 }
 
-/* checkbox hax */
 input[type=checkbox] {
   display: none;
  }
@@ -35,18 +36,22 @@ input[type=checkbox] {
   display: none;
   font-size: 2em;
   user-select: none;
+  position: sticky;
+  top: 0;
 }
 
 @media screen and (max-width: 800px) {
-  #menu {
+  nav {
     display: none;
   }
 
   #hamburger {
-    display: block;
+    display: flex;
+    justify-content: end;
+    padding-right: 10px;
   }
 
-  #checkbox_toggle:checked ~ #menu {
+  #checkbox_toggle:checked ~ nav {
     display: block;
   }
 }
