--- a/lib/style.css
+++ b/lib/style.css
@@ -4,54 +4,80 @@ body {
   font-weight: 200;
   margin: 0;
   display: grid;
+  grid-template-rows: auto 1fr;
   background: linear-gradient(164deg, rgba(123,134,232,1) 0%, rgba(246,140,255,1) 52%, rgba(255,222,50,1) 100%);
-
+  height: 100vh;
 }
-
-nav {
+#mobile_nav {
+  display: none;
+  position: fixed;
+  top: 2.5em;
+  width: 100vw;
+}
+#desktop_nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: sticky;
-  top: 0;
-  width: 100vw;
-  background-color: rgba(100, 106, 112, 0.226);
 }
-
-header {
-  /* background: linear-gradient(164deg, rgba(123,134,232,1) 0%, rgba(246,140,255,1) 52%, rgba(255,222,50,1) 100%); */
-}
-
-#menu {
-  list-style: none;
+#desktop_menu {
   display: flex;
   gap: 1em;
+}
+li {
+  display: flex;
+  list-style: none;
+  gap: 1em;
+}
+#mobile_menu {
+  display: flex;
+  flex-direction: column;
+  padding-left: 1em;
 }
 
 input[type=checkbox] {
   display: none;
  }
-
+ #mobile_name {
+  display: none;
+ }
+header {
+  display: flex;
+  justify-content: space-between;
+  position: sticky;
+  top: 0;
+  padding: 0 1em;
+}
 #hamburger {
   display: none;
   font-size: 2em;
   user-select: none;
-  position: sticky;
-  top: 0;
+
 }
 
 @media screen and (max-width: 800px) {
-  nav {
+  #desktop_nav {
     display: none;
   }
-
+  #logo_name {
+    display: none;
+  }
+  #mobile_name {
+    display: block;
+    margin: 0;
+  }
   #hamburger {
     display: flex;
-    justify-content: end;
-    padding-right: 10px;
   }
 
-  #checkbox_toggle:checked ~ nav {
-    display: block;
+  #checkbox_toggle:checked ~ #mobile_nav {
+    display: flex;
   }
+}
+
+
+
+img { 
+  width:100vw;
+  height: 2000px;
+
 }
