--- a/lib/style.css
+++ b/lib/style.css
@@ -4,7 +4,7 @@ body {
   font-weight: 200;
   margin: 0;
   display: grid;
-  grid-template-rows: auto 1fr;
+  grid-template-rows: 5em auto auto;
   background: linear-gradient(164deg, rgba(123,134,232,1) 0%, rgba(246,140,255,1) 52%, rgba(255,222,50,1) 100%);
   height: 100vh;
   color: white;
@@ -96,10 +96,9 @@ nav {
   /* padding: 2em; */
   gap: 20px;
   justify-content: center;
-  align-items: center;
 }
 .intro_product {
-  height: 400px;
+  height: 350px;
   width: 250px;
   background-color: rgba(255, 255, 255, 0.575);
   border-radius: 10px;
